--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Live coronavirus news, tracking confirmed cases, recovered patients, and death toll by country." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <title>Coronavirus spread</title>
+  <title>Coronavirus spread statistics</title>
 </head>
 
 <body>
